@@ -99,6 +99,8 @@ double user_matrix_get_log_determinant (const gretl_matrix *m, int *err);
 
 gretl_matrix *user_matrix_get_inverse (const gretl_matrix *m);
 
+gretl_matrix *user_matrix_moore_penrose (const gretl_matrix *m);
+
 gretl_matrix *user_matrix_cholesky_decomp (const gretl_matrix *m);
 
 gretl_matrix *user_matrix_column_demean (const gretl_matrix *m);
